# Caracal

./: CMakeLists.txt  README.md  fetch_deps.bat  partitions.csv  sdkconfig.defaults
components/gumbo/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  browser.c  browser.h  css_style.c  css_style.h  display.c  display.h  html_dom.c  html_dom.h  http_fetch.c  http_fetch.h  idf_component.yml  layout.c  layout.h  layout_flex.c  layout_flex.h  layout_grid.c  layout_grid.h  lv_mem_psram.c  lv_mem_psram.h  main.c  renderer.c  renderer.h  touch.c  touch.h  wifi_sta.c  wifi_sta.h
